# 2D-Game

./: .gitignore  .gitmodules  CMakeLists.txt  Editor  README.md  glm_dummy
assets/: images.xml
assets/images/: radar.json
assets/shaders/: model.vert  particle.frag
assets/tilemaps/: Map.json
data/: EndGame.xaml  GameView.xaml  LoadGame.xaml  Loading.xaml  MainMenu.xaml  MainWindow.xaml  NewGame.xaml  PauseMenu.xaml  basicView.xaml
data/images/: radar.json  radar.xaml
data/theme/: NoesisTheme.Fonts.xaml
dependences/glad/include/glad/: glad.h
dependences/glfw/: CMakeLists.txt
dependences/tinyxml2/: CMakeLists.txt
levels/: Level1.lua  Level1.map  level-1.map
saves/: Level1.json
shaders/: model.frag  model.vert  modelStatic.frag  particle.frag  particle.vert  tile.frag
source/: AssetsManager.cpp  AssetsManager.hpp  Audio.cpp  Audio.hpp  Camera.cpp  Camera.hpp  Constants.hpp  ContactListener.cpp  ContactListener.hpp  EntityManager.cpp  EntityManager.hpp  Game.cpp  Game.hpp  LuaManager.cpp  LuaManager.hpp  Map.cpp  Map.hpp  Mesh.cpp  Mesh.hpp  ParticleEmitter.cpp  ParticleEmitter.hpp  ParticleSystem.cpp  ParticleSystem.hpp  Random.cpp  Random.hpp  SaveFiles.cpp  SaveFiles.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  Window.cpp  Window.hpp  main.cpp
source/components/: CollisionComponent.hpp  KeyboardControlComponent.hpp  MeshComponent.h  MeshComponent.hpp  ParticlesComponent.hpp  ProjectileEmitterComponent.hpp  SpriteComponent.hpp  TileComponent.hpp  TransformComponent.hpp
source/gui/: EmbeddedXamlProvider.cpp  EmbeddedXamlProvider.hpp  EndGame.cpp  EndGame.hpp  FontProvider.cpp  FontProvider.hpp  GameView.cpp  GameView.hpp  Gui.cpp  Gui.hpp  LoadGame.cpp  LoadGame.hpp  Loading.cpp  Loading.hpp  MainMenu.cpp  MainMenu.hpp  MainWindow.cpp  MainWindow.hpp  NewGame.cpp  NewGame.hpp  PauseMenu.cpp  PauseMenu.hpp  Resourses.hpp  ViewModel.cpp  ViewModel.hpp  XamlProvider.cpp  XamlProvider.hpp
